--- a/01_flex/tareadeflex-box/misfotos.html
+++ b/01_flex/tareadeflex-box/misfotos.html
@@ -14,14 +14,9 @@
     <div class="hijo">3</div>
     <div class="hijo">4</div>
     <div class="hijo">5</div>
-    <div class="hijo">6</div>
+    <img src="pedro.jpg"class= "hijo" alt=""
 
-    <div class="hijo">
- <img src="rebeca.jpg.jpg" class="hijo" alt="">
-    </div>
-    <div class="hijo">
- <img src="pedro.jpg.png" class="hijo" alt=">
-    </div>
+
  
 
 
