--- a/01_flex/index.html
+++ b/01_flex/index.html
@@ -17,5 +17,14 @@
  <div class="hijo">5</div>
  <div class="hijo">6</div>
 </div>
+<div class="padreDos">
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus incidunt sunt, debitis vitae, temporibus nemo numquam labore hic, voluptas nostrum id ipsa cumque sed? Ipsam mollitia excepturi exercitationem facere aperiam?</p>
+    <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus dicta, quas perspiciatis hic nobis accusantium placeat impedit molestiae eos nesciunt magni porro. Ullam, fugit laudantium facere libero possimus alias excepturi!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio fugiat nesciunt dolore facilis aut? Laudantium cumque aliquam, architecto ratione nihil incidunt quod voluptates et? Aliquam itaque tempore libero animi facere.</p>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequuntur, odio sunt. Unde ducimus beatae quos, illum sed aliquam amet eligendi nostrum quaerat magni repellendus ab blanditiis officiis laboriosam, sint eius.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium ad quod est. Consequuntur, corrupti tempora. Esse saepe minima alias tempora voluptas, sed, necessitatibus recusandae quia debitis cumque iusto, ullam amet!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi quibusdam omnis asperiores ut. Illo nostrum reiciendis, sequi vel non blanditiis iusto reprehenderit et id soluta, obcaecati in minima. Vel, dolorem!</p>
+    
+</div>
 </body>
 </html>
