--- a/03_boostrap/productos.html
+++ b/03_boostrap/productos.html
@@ -31,7 +31,7 @@
           <a class="nav-link" href="#">Pricing</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link disabled">Disabled</a>
+          <a class="nav-link disabled"  aria-disabled="true">Disabled</a>
         </li>
       </ul>
     </div>
