--- a/03_boostrap/repaso.html
+++ b/03_boostrap/repaso.html
@@ -8,7 +8,7 @@
     <!--lo traemos desde la pagina oficial-->
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
-  
+</head>
 </head>
 <body>
   <!--2. Usamos un componente de Bootstrap-->
@@ -28,17 +28,12 @@
         <li class="nav-item">
           <a class="nav-link" href="productos.html">Productos</a>
 
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
+         </li>
+        <li class="nav-item">
+           <a class="nav-link" href="#">Pricing</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Features</a>
-
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Pricing</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link disabled">Disabled</a>
+          <a class="nav-link disabled"  aria-disabled="true">Disabled</a>
         </li>
       </ul>
     </div>
